[gd_scene load_steps=3 format=3 uid="uid://n0eqcjot4u3w"]

[ext_resource type="Script" path="res://Editor/Window/WindowPlaneEdit.gd" id="1_axodw"]
[ext_resource type="PackedScene" uid="uid://dxqs750g7hooi" path="res://Editor/PLaneEdit/plane_edit.tscn" id="2_jwmxs"]

[node name="WindowPlaneEdit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_axodw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.5
offset_top = -106.0
offset_right = 242.5
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimelinePointInformatios" type="Label" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "123"
horizontal_alignment = 1
vertical_alignment = 2

[node name="CreatePlaneEd" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "create plane "

[node name="TableContents" type="HBoxContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer2/TableContents"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "path"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer2/TableContents"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "side"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer2/TableContents"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "type"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer2/TableContents"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "time"
horizontal_alignment = 1

[node name="Planes" type="VBoxContainer" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlaneEdit" parent="VBoxContainer2/Planes" instance=ExtResource("2_jwmxs")]
layout_mode = 2

[node name="PlaneEdit2" parent="VBoxContainer2/Planes" instance=ExtResource("2_jwmxs")]
layout_mode = 2

[node name="Probel" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 2

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Save" type="Button" parent="VBoxContainer2/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="Delete" type="Button" parent="VBoxContainer2/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[connection signal="pressed" from="VBoxContainer2/CreatePlaneEd" to="." method="_on_create_plane_ed_pressed"]
[connection signal="pressed" from="VBoxContainer2/Buttons/Save" to="." method="_on_save_pressed"]
